# rogalitur

./: .gitignore  CMakeLists.txt  LICENSE  README.md  player.cpp  types_utils.hpp
assets/: char1.xcf
src/: CMakeLists.txt  entity.cpp  entity.hpp  main.cpp  map.cpp  map.hpp  physics.cpp  physics.hpp  player.cpp  player.hpp  renderable.cpp  renderable.hpp  types_utils.hpp
